--- a/WebApp/Views/PersonDetails/Update.cshtml
+++ b/WebApp/Views/PersonDetails/Update.cshtml
@@ -11,6 +11,7 @@
 <h4>PersonDetails</h4>
 <hr />
 <form method="post" asp-action="Update">
+    <input asp-for="Id" hidden />
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Update">
